# ubi-tasks

./: .gitignore  ASSIGNMENT.md  CMakeLists.txt  README.md
include/: Crc32Task.h  ITask.h  OpusTask.h  TaskFactory.h  TasksRunner.h  crc32.h
src/: Crc32Task.cpp  OpusTask.cpp  TaskFactory.cpp  TasksRunner.cpp  crc32.cpp  main.cpp
